# ezytutors

./: Cargo.toml  README.md  test.rest  usage.txt
tutor-db/: Cargo.toml
tutor-db/src/: database.sql  lib.rs
tutor-db/src/iter2/: handlers.rs  mod.rs  models.rs  (+1 more)
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs
tutor-web-app-ssr/: .env  Cargo.toml
tutor-web-app-ssr/src/iter5/: handler.rs  state.rs
tutor-web-app-ssr/src/iter6/: dbaccess.rs  handler.rs  model.rs  routes.rs
tutor-web-app-ssr/src/iter6/dbscripts/: user.sql
tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs  mod.rs  register.rs
tutor-web-app-ssr/static/: static-web-page.html  tutor-styles.css
tutor-web-app-ssr/static/iter2/: form.html
tutor-web-app-ssr/static/iter6/: register.html  signin.html  user.html
tutor-web-service/: Cargo.toml
tutor-web-service/src/iter2/: state.rs
tutor-web-service/src/iter3/: db_access.rs  models.rs  routes.rs
tutor-web-service/src/iter4/: db_access.rs
tutor-web-service/src/iter5/: errors.rs
tutor-web-service/src/iter5/dbaccess/: tutor.rs
tutor-web-service/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-web-service/src/iter5/handlers/: tutor.rs
tutor-web-service/src/iter5/models/: course.rs
tutor_db/: .env  Cargo.toml
tutor_db/src/: database.sql
tutor_db/src/iter2/: handlers.rs  routes.rs  state.rs
tutor_db/src/iter3/: db_access.rs  handlers.rs  models.rs
tutor_db/src/iter4/: db_access.rs  errors.rs  handlers.rs
tutor_db/src/iter5/: errors.rs  routes.rs
tutor_db/src/iter5/dbaccess/: course.rs  tutor.rs
tutor_db/src/iter5/dbcripts/: course.sql
tutor_db/src/iter5/dbscripts/: course_tutor.sql
tutor_db/src/iter5/handlers/: course.rs  tutor.rs
tutor_db/src/iter5/models/: course.rs  tutor.rs
(+9 files in other folders)
