[package]
name = "tutor_nodb"
version = "0.1.0"
edition = "2021"
default-run = "tutor_service"

[dependencies]
actix-web = "*"
actix-rt = "*"

serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }

[[bin]]
name = "basic_server"

[[bin]]
name = "tutor_service"
