[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
awc = "3.5.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
sqlx = { version = "0.8.2", default_features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenv = "0.15.0"
