[package]
name = "tutor-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", default_features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
] }
actix-rt = "2.10.0"
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
openssl = { version = "0.10.66", features = ["vendored"] }
